controllers/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urlshortener
spec:
  selector:
    app: urlshortener
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
